<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"

    android:alpha="0.8"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TBstart"
        android:textAlignment="center"
        android:textSize="45sp"
        android:id="@+id/TBstart"
        android:textStyle="bold"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/ETstart"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/ETstart"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp"/>

        <Button
            android:id="@+id/ET2start"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:text="@string/ET2start"
            android:textAlignment="center"
            android:onClick="userlogin"
            android:textSize="40sp" />
    </LinearLayout>
</LinearLayout>
