<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start"

    android:alpha="0.8"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TBenroll"
            android:textAlignment="center"
            android:textSize="45sp"
            android:id="@+id/TBenroll"
            android:textStyle="bold"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/ETstart"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ETstart"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"/>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/Benroll"
            android:textAlignment="center"
            android:layout_weight="1"
            android:onClick="enroll"
            android:layout_height="wrap_content"
            android:text="@string/Benroll"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"/>
    </LinearLayout>
</LinearLayout>
